--- a/SalesWeb/appsettings.json
+++ b/SalesWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebContext-2721cced-dfd6-45a2-8636-b8fa46619f88;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
