MySQL adaptation and firs migration

--- a/SalesWeb/appsettings.json
+++ b/SalesWeb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebContext-2721cced-dfd6-45a2-8636-b8fa46619f88;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebContext": "server=localhost;userid=development;password=b123456.;database=saleswebmvcappdb"
   }
 }
